# python

./: .gitattributes  .gitignore  _config.yml  contents.md  environment.yml  pixi.toml  preface.md  pyproject.toml  readme.md
01-bases/01-arithmetique/: eratosthene.py
01-bases/02-bibliotheque/: pgcd.py  timezones.py
01-bases/03-fichiers/: drapeaux.py  sockets_01.py  sockets_02.py  sockets_03.py
01-bases/04-structures/: fenetre_glissante.py  jeux_de_des.py  polonaise_inversee.py
01-bases/cassini/: rayon.py
02-ecosysteme/: 09-jupyter.ipynb  projections.py
02-ecosysteme/06-matplotlib/: fig06.py  fig07.py  fig08.py  fig09.py  fig11.py  fig13.py  fig14.py  fig17.py  fig18.py
02-ecosysteme/07-matplotlib/: fig01.py  fig02.py  fig03.py  fig04.py  fig05.py  fig1.py  fig10.py  fig12.py  fig15.py  fig16.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  fig8.py  fig9.py
02-ecosysteme/07-scipy/: fig04.py
02-ecosysteme/08-scipy/: fig01.py  fig02.py  fig03.py  fig05.py  fig06.py
03-pythonic/12-functional/: composition.py  curryfication.py  fibonacci.py  lsystems.py
03-pythonic/13-decorateurs/: chronometre.py  chronometre_fmt.py  logger.py  memoisation.py  pile_appel.py
05-projects/25-packaging/fip_online/: setup.cfg
05-projects/25-packaging/fip_online/fip_online/: __main__.py
05-projects/25-packaging/fip_online/fip_online/core/: utils.py
05-projects/25-packaging/fip_online/fip_online/ui/: ncurses.py  qt.py
05-projects/25-packaging/fip_online/fip_online/web/: flask.py
05-projects/25-packaging/fip_online/fip_online/web/templates/: layout.html
05-projects/25-packaging/fip_textual/: hello.py  pyproject.toml
05-projects/25-packaging/fip_textual/src/fip_textual/: __init__.py  fip.tcss
05-projects/28-api/pywhatlang/: Cargo.toml  pyproject.toml
05-projects/28-api/pywhatlang/src/: lib.rs
_layouts/: code.html  default.html  pyscript.html
_pages/: 404.md  contents.md  horner.py  installation.md  preface.md
_static/: life-expectancy-vs-gdp-per-capita.json  top20_villes.json
data/: ARPEGE_0.1_IP1_00H12H_20240511T0600.grib2  codes.json  distances.npy  samples.rtl
(+191 files in other folders)
