[metadata]
name = fip_online
author = Xavier Olive
author_email = git@xoolive.org
version = 1.0
license_file = license.txt
url = https://github.com/xoolive/python/
license = MIT
description = Un simple outil pour accéder à l'API de Radio France
long_description = file: readme.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
    flask
    pandas
    pyqt5
    requests

[options.entry_points]
console_scripts =
    fip_online = fip_online.__main__:main
    fip_gui = fip_online.ui.qt:main
    fip_web = fip_online.web.flask:main

[options.package_data]
fip_online.web = static/*, templates/*

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
testpaths = fip_online
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS

[flake8]
max-line-length = 80
exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,
    build,
    dist
