[project]
name = "fip-textual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.2",
    "pandas>=2.2.3",
    "textual>=0.83.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "ruff>=0.6.9",
    "textual-dev>=1.6.1",
]

[project.scripts]
fip_textual = 'fip_textual:main'

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.ruff]
select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "RUF",
]
line-length = 80
target-version = "py313"
