[package]
name = "pywhatlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pywhatlang"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
serde = "1.0.197"
serde_json = "1.0.115"
whatlang = { version = "0.16.4", features = ["serde"] }
